changed all paths to relative using base path

--- a/dev/new.html
+++ b/dev/new.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <base href="../">
     <title>Nick's Playground - Untitled</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- import jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- import all core scripts, including includeFile -->
-    <script src="/src/main.js"></script>
+    <script src="src/main.js"></script>
     
-    <script>includeFile("/dependencies.php", "dependencies", "script", "head") </script>
+    <script>includeFile("dependencies.php", "dependencies", "script", "head") </script>
 
     <!-- import file specific scripts -->
     <script></script>
 
     <!-- import file specific style -->
-    <link href="/dev/new.css" rel="stylesheet">
+    <link href="dev/new.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Trumbowyg/2.25.1/ui/trumbowyg.min.css">
 
   </head>
   <body>
     
-    <script>includeFile("/pieces/header.php", "header")</script>
+    <script>includeFile("pieces/header.php", "header")</script>
 
     <div class="title">
         <h2>
