--- a/dev/index.html
+++ b/dev/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Nick's Playground - Untitled</title>
-    <base href="/">
+    <base href="../">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- import jquery -->
