--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <base href="/">
+    <base href="">
     <title>Nick's Playground - Untitled</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
